[C#] Models to be generated as partial #872

--- a/modules/swagger-codegen/src/main/resources/csharp/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/csharp/model.mustache
@@ -13,7 +13,7 @@ namespace {{package}} {
   /// {{description}}
   /// </summary>
   [DataContract]
-  public class {{classname}} {
+  public partial class {{classname}} {
     {{#vars}}
     {{#description}}/* {{{description}}} */{{/description}}
     [DataMember(Name="{{baseName}}", EmitDefaultValue=false)]
